--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
 <body>
 
 <div class="profile-container">
-    <img src="img/sehan.png" alt="Nursehan Zaelani" class="profile-picture">
+    <img src="sehan.png" alt="Nursehan Zaelani" class="profile-picture">
     <div class="profile-info">
         <h1>Nursehan Zaelani</h1>
         <p>I’m a graduate of Informatics Engineering from STMIK IKMI Cirebon. Currently, I work as a Graphic Designer at Showroom Setia Kawan Motor, a Remote Graphic & UI Designer at PT Tecnolica Malini Kayya, and a Private Graphic Design Tutor at Hitaclass (PT Hitamedia Inovasi Hutama). With a passion for visual storytelling and user-centered design, I help businesses and individuals create engaging and effective digital experiences.</p>
@@ -423,3 +423,4 @@
 
 </body>
 </html>
+
