--- a/index.html
+++ b/index.html
@@ -609,7 +609,7 @@
 
 <nav class="navbar">
     <div class="navbar-container">
-        <a href="#home" class="nav-brand"><img src="img/logo.jpg" alt="Logo"></a>
+        <a href="#home" class="nav-brand"><img src="logo.jpg" alt="Logo"></a>
         <button class="menu-toggle" aria-label="Toggle navigation">
             <i class="fas fa-bars"></i>
         </button>
@@ -643,7 +643,7 @@
 </div>
 
 <div id="home" class="profile-container">
-    <img src="img/sehan.png" alt="Nursehan Zaelani" class="profile-picture">
+    <img src="sehan.png" alt="Nursehan Zaelani" class="profile-picture">
     <div class="profile-info">
         <h1>Nursehan Zaelani</h1>
         <p data-en="I'm a graduate of Informatics Engineering from STMIK IKMI Cirebon. Currently, I work as a Graphic Designer at Showroom Setia Kawan Motor, a Remote Graphic & UI Designer at PT Tecnolica Malini Kayya, and a Private Graphic Design Tutor at Hitaclass (PT Hitamedia Inovasi Hutama). With a passion for visual storytelling and user-centered design, I help businesses and individuals create engaging and effective digital experiences.">Saya lulusan Teknik Informatika dari STMIK IKMI Cirebon. Saat ini, saya bekerja sebagai Graphic Designer di Showroom Setia Kawan Motor, Remote Graphic & UI Designer di PT Tecnolica Malini Kayya, dan Private Graphic Design Tutor di Hitaclass (PT Hitamedia Inovasi Hutama). Dengan minat pada visual storytelling dan desain berpusat pada pengguna, saya membantu bisnis dan individu menciptakan pengalaman digital yang menarik dan efektif.</p>
@@ -939,3 +939,4 @@
 
 </body>
 </html>
+
