--- a/index.html
+++ b/index.html
@@ -467,6 +467,12 @@
             min-height: 200px;
             display: none; /* Menyembunyikan elemen banner-image agar GIF menempati ruang yang ada */
         }
+
+                @media (max-width: 768px) {
+    .portfolio-btn {
+        align-self: center !important; /* override align-self: flex-start */}
+        }
+
         .portfolio-btn {
             display: inline-block;
             background-color: #ffffff;
@@ -479,6 +485,8 @@
             transition: background-color 0.3s ease;
             align-self: flex-start; /* Tambahan kode untuk membuat lebar tombol pas dengan teks */
         }
+
+
         .portfolio-btn:hover {
             background-color: #e9e9e9;
         }
@@ -1035,9 +1043,9 @@
         <div class="portfolio-banner-content">
             <img src="img/steps-21930_512.gif" alt="Animated character" class="portfolio-banner-gif">
             <div class="portfolio-text-wrapper">
-                <h3 data-en="Tertarik dengan Proyek Saya?">Interested in My Projects?</h3>
+                <h3 data-en="Penasaran dengan karya saya?">Curious About My Work?</h3>
                 <p data-en="Jelajahi berbagai karya desain grafis dan UI/UX saya untuk melihat bagaimana saya dapat membantu Anda mencapai tujuan bisnis Anda.">Explore my various graphic and UI/UX design works to see how I can help you achieve your business goals.</p>
-                <a href="https://www.canva.com/design/DAGM856IkFg/e13DLDQnEctiQImipAxb7g/edit?utm_content=DAGM856IkFg&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton" class="portfolio-btn"><span data-en="Lihat Lebih Banyak Proyek">View More Projects</span></a>
+                <a href="https://www.canva.com/design/DAGM856IkFg/e13DLDQnEctiQImipAxb7g/edit?utm_content=DAGM856IkFg&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton" class="portfolio-btn"><span data-en="Lihat Portofolio Sayao">Check My Portfolio</span></a>
             </div>
         </div>
         
